<resources>
    <string name="app_name">KensakuDL</string>
    <string name="search_hint">Search anime series...</string>
    <string name="search_btn">Search</string>
    <string name="discover_title">Discover Anime</string>
    <string name="randomize">Randomize</string>
    <string name="episodes_title">Episodes</string>
    <string name="select_all">Select All</string>
    <string name="clear">Clear</string>
    <string name="range">Range</string>
    <string name="download_selected">Download Selected</string>
    <string name="download_queue">Downloads</string>
    <string name="clear_finished">Clear Finished</string>
</resources>
